--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         
         h1{
             transform: rotate(-90deg);
+            -webkit-transform: rotate(-90deg);
             font-size:100px;
         }
         
