--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         span {
         position: absolute;
         top: 50%; right: 50%;
+        -webkit-transform: translate(50%,-50%) rotate(-90deg) scale(3);
         transform: translate(50%,-50%) rotate(-90deg) scale(3);
         background: black;
         color: white;
