--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="refresh" content="1800"></meta>
+    <meta http-equiv="refresh" content="3600"></meta>
     <title>Wetter</title>
     
     <style>
@@ -11,8 +11,8 @@
         span {
         position: absolute;
         top: 50%; right: 50%;
-        -webkit-transform: translate(50%,-50%) scale(4);
-        transform: translate(50%,-50%) scale(4);
+        -webkit-transform: scale(3);
+        transform: scale(3);
         background: black;
         color: white;
         }
@@ -22,7 +22,8 @@
   <body>
     <span>
         <!-- <iframe marginheight='0' marginwidth='0' scrolling='no' width='300' height='255' name='FC1' style='border:1px solid;border-color:#00537f;' src='https://api.wetteronline.de/wetterwidget?gid=10513&modeid=FC1&seourl=koeln&locationname=Köln&lang=de'></iframe> -->
-        <div id="cont_4de45537ff22785e81bcd2676d6aa9ac"><script type="text/javascript" async src="https://www.theweather.com/wid_loader/4de45537ff22785e81bcd2676d6aa9ac"></script></div>
+        <!-- <div id="cont_4de45537ff22785e81bcd2676d6aa9ac"><script type="text/javascript" async src="https://www.theweather.com/wid_loader/4de45537ff22785e81bcd2676d6aa9ac"></script></div> -->
+        <iframe marginheight='0' marginwidth='0' scrolling='no' src='https://www.nippes-wetter.de/PWA_Aktualisierung.php'></iframe>
     </span>
   </body>
 </html>
