--- a/index.html
+++ b/index.html
@@ -5,19 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="refresh" content="3600"></meta>
     <title>Wetter</title>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"></script>
     
     <style>
         * {margin:0;}
         span {
         position: absolute;
         top: 0; left: 0;
-        -webkit-transform: scale(2);
-        transform: scale(2);
+        -webkit-transform: scale(1);
+        transform: scale(1);
         }
         
     </style>
   </head>
   <body>
+    <script type="text/javascript">
+      $.ajax({
+    type: "GET",
+    headers: {"origin": "test"},
+    url: "https://www.nippes-wetter.de/PWA_Aktualisierung.php"
+}).done(function (data) {
+    console.log(data);
+});
+    </script>
+
     <span>
         <!-- <iframe marginheight='0' marginwidth='0' scrolling='no' width='300' height='255' name='FC1' style='border:1px solid;border-color:#00537f;' src='https://api.wetteronline.de/wetterwidget?gid=10513&modeid=FC1&seourl=koeln&locationname=Köln&lang=de'></iframe> -->
         <!-- <div id="cont_4de45537ff22785e81bcd2676d6aa9ac"><script type="text/javascript" async src="https://www.theweather.com/wid_loader/4de45537ff22785e81bcd2676d6aa9ac"></script></div> -->
