--- a/index.html
+++ b/index.html
@@ -26,17 +26,13 @@
     <script type="text/javascript">
       $.ajax({
     type: "GET",
-    headers: {"origin": "test"},
-    url: "https://www.nippes-wetter.de/PWA_Aktualisierung.php"
+    url: "https://api.openweathermap.org/data/2.5/weather?zip=50737,DE&appid=02ee4bca37e17064be5008c73ff486ce"
 }).done(function (data) {
-    console.log(data);
+    var temp = Math.round((data.main.temp - 273.15) * 10) / 10
+    $("#current_temperature").text(temp);
 });
     </script>
 
-    <span>
-        <!-- <iframe marginheight='0' marginwidth='0' scrolling='no' width='300' height='255' name='FC1' style='border:1px solid;border-color:#00537f;' src='https://api.wetteronline.de/wetterwidget?gid=10513&modeid=FC1&seourl=koeln&locationname=Köln&lang=de'></iframe> -->
-        <!-- <div id="cont_4de45537ff22785e81bcd2676d6aa9ac"><script type="text/javascript" async src="https://www.theweather.com/wid_loader/4de45537ff22785e81bcd2676d6aa9ac"></script></div> -->
-        <iframe marginheight='0' marginwidth='0' scrolling='no' width='500' height='400' src='https://www.nippes-wetter.de/PWA_Aktualisierung.php'></iframe>
-    </span>
+  <div id="current_temperature"></div>
   </body>
 </html>
