--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style>
         * {margin:0;}
         .content {
-          max-width: 500px;
+          text-align: center;
           margin: auto;
           font-size: 10em;
         }
