--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"></script>
-    
+    <script src="wind_direction.js"></script>
+
     <style>
         * {margin:0;}
         .content {
@@ -28,6 +29,8 @@
         }
         
     </style>
+
+    <script type="text/javascript"></script>
   </head>
   <body>
     <script type="text/javascript">
@@ -39,43 +42,7 @@
     var temp = (data.main.temp - 273.15).toFixed(1) + "°C";
     $("#current_temperature").text(temp);
 
-    var wind_direction = data.wind.deg;
-    if(wind_direction < 11.25) {
-      wind_direction = "N";
-    } else if(wind_direction < 33.75) {
-      wind_direction = "NNO";
-    } else if(wind_direction < 56.25) {
-      wind_direction = "NO";
-    } else if(wind_direction < 78.75) {
-      wind_direction = "ONO";
-    } else if(wind_direction < 101.25) {
-      wind_direction = "O";
-    } else if(wind_direction < 123.75) {
-      wind_direction = "OSO";
-    } else if(wind_direction < 146.25) {
-      wind_direction = "SO";
-    } else if(wind_direction < 168.75) {
-      wind_direction = "SSO";
-    } else if(wind_direction < 191.25) {
-      wind_direction = "S";
-    } else if(wind_direction < 213.75) {
-      wind_direction = "SSW";
-    } else if(wind_direction < 236.25) {
-      wind_direction = "SW";
-    } else if(wind_direction < 258.75) {
-      wind_direction = "WSW";
-    } else if(wind_direction < 281.25) {
-      wind_direction = "W";
-    } else if(wind_direction < 303.75) {
-      wind_direction = "WNW";
-    } else if(wind_direction < 326.25) {
-      wind_direction = "NW";
-    } else if(wind_direction < 348.75) {
-      wind_direction = "NNW";
-    } else {
-      wind_direction = "N";
-    }
-   
+    var wind_direction = get_wind_direction(data.wind.deg);
     var wind_speed = (data.wind.speed*3.6).toFixed(1);
     $("#current_wind").text(wind_speed + "km/h aus " + wind_direction);
 });
