--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
       crossorigin="anonymous"></script>
     <script src="wind_direction.js"></script>
 
+    <link rel="stylesheet" href="css/weather-icons.min.css">
     <style>
-        * {margin:0;}
         .content {
           text-align: center;
-          margin: auto;
-          
+          margin: auto; 
         }
 
-        #current_temperature {
+        .nobr { white-space: nowrap;
+        }
+
+        #current_icon {
           font-size: 10em;
         }
 
@@ -37,10 +39,11 @@
       $.ajax({
     type: "GET",
     url: "https://api.openweathermap.org/data/2.5/weather?zip=50737,DE&appid=02ee4bca37e17064be5008c73ff486ce&lang=de"
-
 }).done(function (data) {
-    var temp = (data.main.temp - 273.15).toFixed(1) + "°C";
+    var temp = (data.main.temp - 273.15).toFixed(0) + "°C";
+    var icon = 
     $("#current_temperature").text(temp);
+    $("#current_icon").addClass("wi wi-owm-" + data.weather[0].id);
 
     var wind_direction = get_wind_direction(data.wind.deg);
     var wind_speed = (data.wind.speed*3.6).toFixed(1);
@@ -48,8 +51,8 @@
 });
     </script>
   <div class="content">
-    <div id="current_temperature"></div>
+    <i id="current_icon"> <span id="current_temperature"></span></i>
     <div id="current_wind"></div>
-</div>
+  </div>
   </body>
 </html>
