--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
           margin: auto; 
         }
 
-        .nobr { white-space: nowrap;
-        }
-
         #current_icon {
           font-size: 10em;
         }
@@ -85,10 +82,9 @@ $.ajax({
 });
     </script>
   <div class="content">
-    <i id="current_icon"> <span id="current_temperature"></span></i>
+    <iframe src="http://free.timeanddate.com/clock/i7o16m0g/n311/tlde3/fs48/tt0/tw0/tm1/th1/ts1/tb1" frameborder="0" width="435" height="57"></iframe>
+    <div><i id="current_icon"> <span id="current_temperature"></span></i></div>
     <div id="current_wind"></div>
-  
-  
     <table class="tg">
     <tbody>
       <tr>
