--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
           margin: auto; 
         }
 
+        #clock {
+          transform: scale(2);
+          -webkit-transform: scale(2);
+        }
+
         #current {
           padding-top: 100px;
         }
@@ -86,7 +91,9 @@ $.ajax({
 });
     </script>
   <div class="content">
-    <iframe src="http://free.timeanddate.com/clock/i7o16m0g/n311/tlde3/fs48/tt0/tw0/tm1/th1/ts1/tb1" frameborder="0" width="435" height="57"></iframe>
+    <div id="clock">
+      <iframe src="http://free.timeanddate.com/clock/i7o16m0g/n311/tlde3/fs48/tt0/tw0/tm1/th1/ts1/tb1" frameborder="0" width="435" height="57"></iframe>
+    </div>
     <div id="current">
       <i id="current_icon"> <span id="current_temperature"></span></i></div>
       <div id="current_wind"></div>
