--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     type: "GET",
     url: "https://api.openweathermap.org/data/2.5/weather?zip=50737,DE&appid=02ee4bca37e17064be5008c73ff486ce&lang=de"
 }).done(function (data) {
-    var temp = (data.main.temp - 273.15).toFixed(0) + "°C";
+    var temp = (data.main.temp - 273.15).toFixed(1) + "°C";
     $("#current_temperature").text(temp);
     $("#current_icon").addClass("wi wi-owm-" + data.weather[0].id);
 
@@ -70,7 +70,7 @@
 
 $.ajax({
     type: "GET",
-    url: "http://api.openweathermap.org/data/2.5/forecast?zip=50737,DE&appid=02ee4bca37e17064be5008c73ff486ce&lang=de"
+    url: "https://api.openweathermap.org/data/2.5/forecast?zip=50737,DE&appid=02ee4bca37e17064be5008c73ff486ce&lang=de"
 }).done(function (data) {
     var prediction_temp = (data.list[0].main.temp - 273.15).toFixed(0) + "°C";
     $("#prediction_1").text(prediction_temp);
@@ -89,9 +89,6 @@ $.ajax({
 });
     </script>
   <div class="content">
-    <div id="clock">
-      <iframe src="http://free.timeanddate.com/clock/i7o16m0g/n311/tlde3/fs48/tt0/tw0/tm1/th1/ts1/tb1" frameborder="0" width="435" height="57"></iframe>
-    </div>
     <div id="current">
       <i id="current_icon"> <span id="current_temperature"></span></i></div>
       <div id="current_wind"></div>
