--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <script type="text/javascript">
       update();
-      setInterval(update, 1000*30);
+      setInterval(update, 1000*60*10);
     </script>
   <div class="content">
     <div id="current">
