--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript">
     window.addEventListener("load", function(){
       update();
-      setInterval(update, 1000*10);
+      setInterval(update, 1000*60*10);
     });
     </script>
 
@@ -37,6 +37,8 @@
       </tr>
     </tbody>
     </table>
+
+    <div id="qod"></div>
   </div>
   </body>
 </html>
