--- a/index.html
+++ b/index.html
@@ -25,9 +25,17 @@
     
   <div class="content">
     <div id="current">
-      <i id="current_icon"> <span id="current_temperature"></span></i></div>
-      <div id="current_wind"></div>
+      <i id="current_icon"> <span id="current_temperature"></span></i>
     </div>
+
+    <div id="current_wind"></div>
+    
+    <div id="sun">
+      <i class="wi wi-sunrise"><span id="sunrise">12:00</span></i>
+      <i class="wi wi-sunset"><span id="sunset">12:00</span></i>
+      <div id="daylight">0h00</div>
+    </div>
+
     <table class="prediction">
     <tbody>
       <tr>
