--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wetter</title>
 
     <script
@@ -30,17 +29,32 @@
     <div id="current_wind"></div>
     
     <div id="sun">
-      <i class="wi wi-sunrise"><span id="sunrise">12:00</span></i>
-      <i class="wi wi-sunset"><span id="sunset">12:00</span></i>
+      <i class="wi wi-sunrise"> <span id="sunrise">12:00</span></i>
+      <i class="wi wi-sunset"> <span id="sunset">12:00</span></i>
       <div id="daylight">0h00</div>
     </div>
 
     <table class="prediction">
     <tbody>
       <tr>
-        <td class="tg-0lax"><i id="prediction_icon_1"><div id="prediction_1"></div><div id="prediction_rain_1"></div></i></td>
-        <td class="tg-0lax"><i id="prediction_icon_2"><div id="prediction_2"></div><div id="prediction_rain_2"></div></i></td>
-        <td class="tg-0lax"><i id="prediction_icon_3"><div id="prediction_3"></div><div id="prediction_rain_3"></div></i></td>
+        <td class="tg-0lax">
+          <i id="prediction_icon_1">
+            <div id="prediction_1"></div>
+            <div id="prediction_rain_1"></div>
+          </i>
+        </td>
+        <td class="tg-0lax">
+          <i id="prediction_icon_2">
+            <div id="prediction_2"></div>
+            <div id="prediction_rain_2"></div>
+          </i>
+        </td>
+        <td class="tg-0lax">
+          <i id="prediction_icon_3">
+            <div id="prediction_3"></div>
+            <div id="prediction_rain_3"></div>
+          </i>
+        </td>
       </tr>
     </tbody>
     </table>
